ESP32S3_2yadra/Ошибки
омпиляция скетча...
"H:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\tools\\esp-x32\\2511/bin/xtensa-esp32s3-elf-g++" -MMD -c "@H:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32s3/flags/cpp_flags" -Wall -Os -Werror=return-type -DF_CPU=240000000L -DARDUINO=10819 -DARDUINO_ESP32S3_DEV -DARDUINO_ARCH_ESP32 "-DARDUINO_BOARD=\"ESP32S3_DEV\"" "-DARDUINO_VARIANT=\"esp32s3\"" -DARDUINO_PARTITION_default "-DARDUINO_HOST_OS=\"windows\"" "-DARDUINO_FQBN=\"esp32:esp32:esp32s3:JTAGAdapter=default,PSRAM=disabled,FlashMode=qio,FlashSize=4M,LoopCore=1,EventsCore=1,USBMode=hwcdc,CDCOnBoot=cdc,MSCOnBoot=default,DFUOnBoot=default,UploadMode=default,PartitionScheme=default,CPUFreq=240,UploadSpeed=921600,DebugLevel=none,EraseFlash=none,ZigbeeMode=default\"" -DESP32=ESP32 -DCORE_DEBUG_LEVEL=0 -DARDUINO_RUNNING_CORE=1 -DARDUINO_EVENT_RUNNING_CORE=1 -DARDUINO_USB_MODE=1 -DARDUINO_USB_CDC_ON_BOOT=1 -DARDUINO_USB_MSC_ON_BOOT=0 -DARDUINO_USB_DFU_ON_BOOT=0 "@H:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32s3/flags/defines" "-IH:\\RADIO\\MK\\Proektis\\Proekt UmniyDom\\Нов проект на ESP32_S3\\ESP32S3_2yadra\\sketch_jan17b" -iprefix "H:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32s3/include/" "@H:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32s3/flags/includes" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32s3/qio_qspi/include" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\hardware\\esp32\\3.3.5\\cores\\esp32" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\hardware\\esp32\\3.3.5\\variants\\esp32s3" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\WiFi\\src" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\Network\\src" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\libraries\\AsyncTCP\\src" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\libraries\\ESPAsyncWebServer\\src" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\FS\\src" "-IC:\\Users\\sasa\\Documents\\Arduino\\libraries\\ArduinoJson\\src" "-IH:\\RADIO\\MK\\Progi\\FLProg\\downloads\\PortableFLProg_8-1-0_Win64\\ideV8\\portable\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\Hash\\src" "@C:\\Users\\sasa\\AppData\\Local\\Temp\\arduino_build_260207/build_opt.h" "@C:\\Users\\sasa\\AppData\\Local\\Temp\\arduino_build_260207/file_opts" "C:\\Users\\sasa\\AppData\\Local\\Temp\\arduino_build_260207\\sketch\\sketch_jan17b.ino.cpp" -o "C:\\Users\\sasa\\AppData\\Local\\Temp\\arduino_build_260207\\sketch\\sketch_jan17b.ino.cpp.o"
H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\ESP32S3_2yadra\sketch_jan17b\sketch_jan17b.ino: In function 'void setupESP_NOW()':
sketch_jan17b:477:30: error: invalid conversion from 'void (*)(const uint8_t*, esp_now_send_status_t)' {aka 'void (*)(const unsigned char*, esp_now_send_status_t)'} to 'esp_now_send_cb_t' {aka 'void (*)(const wifi_tx_info_t*, esp_now_send_status_t)'} [-fpermissive]
In file included from H:\RADIO\MK\Proektis\Proekt UmniyDom\Нов проект на ESP32_S3\ESP32S3_2yadra\sketch_jan17b\sketch_jan17b.ino:9:
H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\portable\packages\esp32\tools\esp32-arduino-libs\idf-release_v5.5-9bb7aa84-v2\esp32s3/include/esp_wifi/include/esp_now.h:193:54: note:   initializing argument 1 of 'esp_err_t esp_now_register_send_cb(esp_now_send_cb_t)'
  193 | esp_err_t esp_now_register_send_cb(esp_now_send_cb_t cb);
      |                                    ~~~~~~~~~~~~~~~~~~^~
sketch_jan17b:478:30: error: invalid conversion from 'void (*)(const uint8_t*, const uint8_t*, int)' {aka 'void (*)(const unsigned char*, const unsigned char*, int)'} to 'esp_now_recv_cb_t' {aka 'void (*)(const esp_now_recv_info*, const unsigned char*, int)'} [-fpermissive]
H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\portable\packages\esp32\tools\esp32-arduino-libs\idf-release_v5.5-9bb7aa84-v2\esp32s3/include/esp_wifi/include/esp_now.h:172:54: note:   initializing argument 1 of 'esp_err_t esp_now_register_recv_cb(esp_now_recv_cb_t)'
  172 | esp_err_t esp_now_register_recv_cb(esp_now_recv_cb_t cb);
      |                                    ~~~~~~~~~~~~~~~~~~^~
Несколько библиотек найдено для "WiFi.h"
 Используется: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\portable\packages\esp32\hardware\esp32\3.3.5\libraries\WiFi
Не используется: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\WiFi
Несколько библиотек найдено для "AsyncTCP.h"
 Используется: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\AsyncTCP
Не используется: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\Async_TCP
Не используется: C:\Users\sasa\Documents\Arduino\libraries\Async_TCP
Несколько библиотек найдено для "ESPAsyncWebServer.h"
 Используется: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\ESPAsyncWebServer
Не используется: C:\Users\sasa\Documents\Arduino\libraries\ESP_Async_WebServer
Несколько библиотек найдено для "ArduinoJson.h"
 Используется: C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson
Не используется: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\ArduinoJson
Используем библиотеку WiFi версии 3.3.5 из папки: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\portable\packages\esp32\hardware\esp32\3.3.5\libraries\WiFi 
Используем библиотеку Network версии 3.3.5 из папки: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\portable\packages\esp32\hardware\esp32\3.3.5\libraries\Network 
Используем библиотеку AsyncTCP версии 3.3.2 из папки: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\AsyncTCP 
Используем библиотеку ESPAsyncWebServer версии 3.6.0 из папки: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\libraries\ESPAsyncWebServer 
Используем библиотеку FS версии 3.3.5 из папки: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\portable\packages\esp32\hardware\esp32\3.3.5\libraries\FS 
Используем библиотеку ArduinoJson версии 6.21.5 из папки: C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson 
Используем библиотеку Hash версии 3.3.5 из папки: H:\RADIO\MK\Progi\FLProg\downloads\PortableFLProg_8-1-0_Win64\ideV8\portable\packages\esp32\hardware\esp32\3.3.5\libraries\Hash 
exit status 1
invalid conversion from 'void (*)(const uint8_t*, esp_now_send_status_t)' {aka 'void (*)(const unsigned char*, esp_now_send_status_t)'} to 'esp_now_send_cb_t' {aka 'void (*)(const wifi_tx_info_t*, esp_now_send_status_t)'} [-fpermissive]
